--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,27 @@
+# Firebase
+.firebaserc
+firebase.json
+firebase-debug.log
+
 # Dependencies
-node_modules/
-.pnp
-.pnp.js
+/node_modules
+/functions/node_modules
 
-# Testing
-coverage/
-
-# Production
-build/
-dist/
-
-# Misc
-.DS_Store
+# Environment variables & secrets
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+functions/.env
+!/.env.example
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
-.idea
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-*.suo
-*.ntvs
-*.njsproj
-*.sln
-*.swp
+# Build output
+/dist
+/build
 
-# OS
-Thumbs.db
-
-# Project Local Files
+# Editor/IDE specific
 .wakatime-project
 SESSION_STATUS.md
-firebase-debug.log
