--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.6",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0"
   },
